| Summary: | ASTERISK-25505: res_pjsip_pubsub: Crash on off-nominal when UAS dialog can't be created | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2015-10-29 07:46:56 | Date Closed: | 2015-10-29 09:38:52 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_pubsub |
| Versions: | 13.6.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When a UAS dialog for a subscription is unable to be created the newly created subscription tree is destroyed. This destruction incorrectly assumes that a dialog will always exist on the subscription tree when in reality in this case it won't. As a result when the dialog is unreferenced an assertion in PJSIP will occur as the dialog is NULL. | ||
| Comments: | |||